# agentgauntlet

./: .gitignore  Cargo.toml  IMPLEMENTATION_REPORT.md  LICENSE  README.md  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: agent.rs  cli.rs  http.rs  lib.rs  mcp.rs  ollama.rs  openai_compat.rs  stateless_cli.rs
crates/cli/: Cargo.toml
crates/cli/src/: cmd_quick.rs  cmd_scan.rs  main.rs  runner.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  run.rs  scoring.rs  types.rs
crates/demo/: Cargo.toml
crates/demo/src/: lib.rs  vulnerable_agent.rs
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: delayed_trigger.rs  lib.rs  memory_rules.rs  output_rules.rs  privacy_rules.rs  tool_rules.rs  trajectory.rs
crates/judge/: Cargo.toml
crates/judge/src/: claude.rs  lib.rs  null.rs  openai_compat.rs  types.rs
crates/privacy/: Cargo.toml
crates/privacy/src/: canary.rs  detector.rs  lib.rs
crates/report/: Cargo.toml
crates/report/src/: agent_report.rs  comparison.rs  console.rs  html.rs  json.rs  lib.rs  markdown.rs  sarif.rs  scorecard.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: lib.rs  loader.rs  schema.rs  standard.rs  validate.rs
dataset/generator/: generate_scenarios.py  pyproject.toml
dataset/generator/templates/: cross_tool_contamination.yaml.j2  delayed_trigger.yaml.j2  indirect_injection.yaml.j2  memory_poisoning.yaml.j2  multi_agent.yaml.j2  rag_poisoning.yaml.j2  tokenization.yaml.j2  tool_escalation.yaml.j2
dataset/import/: README.md  import_advbench.py  import_memoryagentbench.py  import_toolbench.py
dataset/seeds/: README.md  memory_attack_seeds.yaml  prompt_injection_seeds.yaml  tool_usage_seeds.yaml
docs/: architecture.md  benchmark.md  evaluation.md  privacy_evaluation.md  roadmap.md  scenario_format.md  threat_model.md
examples/cli_agent/: README.md  lmstudio_agent.py  vulnerable_agent.py
examples/http_agent/: README.md  vulnerable_server.py
paper/: agentgauntlet.md
scenarios/benchmark/cross_tool_contamination/: memory_to_shell.yaml
scenarios/benchmark/delayed_trigger/: trigger_on_phrase.yaml
scenarios/benchmark/indirect_injection/: file_content_injection.yaml
scenarios/benchmark/memory_poisoning/: api_key_exfil.yaml
scenarios/benchmark/prompt_injection_multi_turn/: basic_ignore.yaml
scenarios/benchmark/tool_escalation/: shell_abuse.yaml
scenarios/demo/: delayed_trigger.yaml  indirect_injection.yaml  memory_poisoning.yaml  tool_escalation.yaml
scenarios/lmstudio/: context_leak.yaml  delayed_trigger.yaml  ignore_instructions.yaml  role_confusion.yaml
scenarios/privacy/: canary_aws_key_never_expose.yaml  canary_password_env_never_expose.yaml  canary_secret_never_expose.yaml  cross_turn_codename_leak.yaml  cross_turn_endpoint_leak.yaml  cross_turn_user_id_leak.yaml  do_not_remember_client_name.yaml  do_not_remember_codename.yaml  do_not_remember_internal_endpoint.yaml  memory_poisoning_code_comment.yaml  memory_poisoning_json_config.yaml  memory_poisoning_private_data.yaml  private_data_tool_argument.yaml  private_data_tool_argument_aws.yaml  private_data_tool_argument_db_password.yaml  redact_private_email.yaml  redact_private_phone.yaml  redact_user_id.yaml  repo_private_note_retention.yaml  repo_private_note_source_comment.yaml  repo_private_note_yaml_config.yaml
scripts/: benchmark.sh  generate_dataset.sh
