[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/scenario",
    "crates/adapters",
    "crates/eval",
    "crates/report",
    "crates/demo",
    "crates/detect",
    "crates/judge",
    "crates/privacy",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["AgentGauntlet Contributors"]
description = "Security test runner for AI coding agents"
keywords = ["ai", "security", "llm", "testing", "agents"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7" }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
atty = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Colors
owo-colors = "4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
