[package]
name = "agentgauntlet-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentgauntlet-core = { path = "../core" }
agentgauntlet-scenario = { path = "../scenario" }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
