[package]
name = "agentgauntlet_judge"
version.workspace = true
edition = "2021"

[dependencies]
agentgauntlet-core = { path = "../core" }
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
