[package]
name = "agentgauntlet-scenario"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentgauntlet-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
